# mbzirc_c2_auto

./: .gitignore  .gitmodules  README.md  README.md~
UGV_Manual/UGV_teleop/: CMakeLists.txt  package.xml
arm_nav_correct/: CMakeLists.txt  package.xml
arm_nav_correct/launch/: base_visual.launch  valve_nav_correct.launch  wrench_nav_correct.launch
arm_nav_correct/scripts/: arm_correction.py  arm_nav.py  arm_nav_cor.py  arm_nav_cor.py~  arm_nav_pre.py  arm_nave_pre.py  arm_nave_pre.py~  arm_wrech_cor.py  base_arm_nav.py  base_visual.py  circle.py  location.py  locations.py  move_arm_param.py  move_arm_param_valve.py  move_arm_pub.py  test.py  valocs_pub.py  valve_correction.py  valve_correction.py~  wloc_list.py  wloc_pub.py  wloc_pub2.py  wrench_correction.py  wrench_correction2.py  wrench_loc_list.py  wrench_loc_pub.py
backitup_recovery/: CMakeLists.txt  backitup_plugin.xml  package.xml
backitup_recovery/include/backitup_recovery/: backitup_recovery.h
backitup_recovery/src/: backitup_recovery.cpp
but_velodyne/but_velodyne_proc/: CMakeLists.txt
gripper/: install the gripper
gripper/gripper_control/: CMakeLists.txt  package.xml
gripper/gripper_description/: CMakeLists.txt  package.xml
gripper/gripper_gazebo/: CMakeLists.txt  package.xml
gripper/mybot_control/: package.xml
gripper/mybot_description/: package.xml
gripper/mybot_gazebo/: CMakeLists.txt~  package.xml  package.xml~
gripper/mybot_gazebo/Media/models/: board.DAE  w1.DAE  w3.DAE  w5.DAE  w6.DAE
gripper/mybot_gazebo/launch/: mybot_world.launch  mybot_world.launch~
gripper/mybot_gazebo/worlds/: mybot.world
husky/husky_control/: CMakeLists.txt  Makefile
husky/husky_control/config/: control_ur5.yaml  control_ur5.yaml~
husky/husky_control/scripts/: inv_kinematics_test  joystick_output_test  joystick_test  kinematics_test  ros_kinematics_test  ros_rotation_test  stow_ur5
husky/husky_maps/: CMakeLists.txt  package.xml
husky/husky_msgs/: Makefile
husky/husky_navigation/: Makefile
husky/husky_ur5_moveit_config/: Makefile
kuri_mbzirc_sim-master/: CMakeLists.txt  LICENSE  README.md  package.xml
kuri_mbzirc_sim-master/gazebo_models/models/arena/: model.sdf
kuri_mbzirc_sim-master/gazebo_models/models/panel/: model.sdf  model.sdf~
kuri_mbzirc_sim-master/gazebo_models/models/panel/meshes/: panel.dae
kuri_mbzirc_sim-master/gazebo_models/models/stem/meshes/: stem2.dae
kuri_mbzirc_sim-master/gazebo_models/world/: mbzirc_arena_task_2.world~
kuri_mbzirc_sim-master/include/: mbzirc_gazebo_panel_plugin.h  mbzirc_gazebo_truck_plugin.h
kuri_mbzirc_sim-master/launch/: mbzirc_arena.launch  mbzirc_arena_1.launch  mbzirc_arena_2.launch  mbzirc_arena_3.launch
kuri_mbzirc_sim-master/src/: mbzirc_gazebo_panel_plugin.cpp  mbzirc_gazebo_treasure_plugin.cpp  mbzirc_gazebo_truck_plugin.cpp
kuri_mbzirc_sim-master/urdf/: husky_with_camera_laser.urdf.xacro
lms1xx/launch/: LMS1xx.launch
manual_drive/: CMakeLists.txt  package.xml
manual_drive/launch/: joy_UR5.launch
manual_drive/script/: fetch_joystick_teleop.cpp  joyUR5.py  test.py  testJoy.py
manual_drive/src/: joyJoint.py  move_arm_param.py
map_reader/: CMakeLists.txt  arenamap.yaml  mapCoords.yaml  package.xml
map_reader/launch/: amcl.launch
map_reader/scripts/: read_amcl.py  read_map.py  read_odom.py
mbzirc_c2_auto/: CMakeLists.txt  CMakeLists.txt~  costmap_common.yaml  libassimp3_3.0~dfsg-2_amd64.deb  package.xml  package.xml~  sick_lms1xx.urdf.xacro
mbzirc_c2_auto/launch/: base.launch  ch2-armtest.launch  ch2-experiment.launch  ch2-manipulation.launch  ch2-nosmach-barriers.launch  ch2-nosmach.launch  ch2-playpen.launch  ch2-sim.launch  ch2-sim.launch.bk  ch2-sim.launch~  ch2-smach-barriers.launch  ch2-smach-mapping.launch  ch2-smach.launch  ch2-smach.launch~  ch2-wrenchtest.launch  challenge2.launch  check_lidar.launch  empty_world.launch  followup.launch  gmapping.launch  h-arena2-barriers.launch  h-arena2-wrench.launch  h-arena2.launch  h-arena2.launch~  h-control.launch  h-empty-world-wrench.launch  h-empty-world.launch  h-empty-world.launch~  h-playpen-empty-world.launch  h-playpen-spawn.launch  h-playpen.launch  h-spawn-wrench.launch  h-spawn.launch  h-spawn.launch~  move_base.launch  odom-test.launch  orient.launch  orient.launch~  prep-localization.launch  prep-sensors.launch  (+10 more)
mbzirc_c2_state/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
mbzirc_grasping/: CMakeLists.txt  package.xml
trac_ik_tests/: CMakeLists.txt  package.xml
ugv_manual/: README.txt
ugv_manual/ugv_teleop/: CMakeLists.txt  README.md  package.xml  ugv_teleop.rosinstall
ugv_manual/ugv_teleop/launch/: arm_manual_control.launch  manual_control.launch
ugv_manual/ugv_teleop/src/: main_detection.cpp  sunba_video.cpp  teleop.py  teleop_arm.py  teleop_ugv.py
vtrex_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  vtrex_motor.ino
vtrex_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
vtrex_description/launch/: description.launch
vtrex_description/meshes/: TREX.STL  model.config~  wheel_collision.STL  wheelscover.STL  wrench_gripper.sdf~
vtrex_description/meshes/accessories/: laser_mount.STL
vtrex_description/urdf/: macros.xacro  macros.xacro~  materials.xacro  materials.xacro~  microstrain.xacro  mybot.gazebo~  mybot.xacro~  sick_lms1xx.urdf.xacro  sick_lms1xx_mount.urdf.xacro  vtrex.gazebo  vtrex.xacro  vtrex.xacro~  vtrex_old.xacro
vtrex_description/urdf/accessories/: sick_lms1xx.urdf.xacro  sick_lms1xx_mount.urdf.xacro  velodyne_vlp16_mount.urdf.xacro
vtrex_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
vtrex_gazebo/Media/models/: w2.DAE  w4.DAE
vtrex_gazebo/launch/: mybot_world.launch~  vtrex-spawn.launch  vtrex_world.launch  vtrex_world.launch~
vtrex_gazebo/scripts/: vtrex_script.sh
vtrex_gazebo/worlds/: mybot.world~  vtrex.world  vtrex.world~
vtrex_moveit/: .setup_assistant  CMakeLists.txt  package.xml
vtrex_navigation/: CMakeLists.txt  package.xml
vtrex_ur5_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+265 files in other folders)
