<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_sim</name>
  <version>0.1.0</version>
  <description>The KURI MBZIRC SIM based on JSK's project</description>

  <maintainer email="tarek@tarektaha.com">Tarek Taha</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/kuri-kustar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/gazebo_models/models" />
  </export>
</package>
