<?xml version="1.0"?>
<package>
  <name>vtrex_description</name>
  <version>0.0.0</version>
  <description>The mybot_description package</description>

  <maintainer email="karim@vt.edu">karim</maintainer>



  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
<build_depend>roslaunch</build_depend>
<run_depend>robot_state_publisher</run_depend>
<run_depend>urdf</run_depend>
<run_depend>xacro</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
