<?xml version="1.0"?>
<package>
  <name>vtrex_gazebo</name>
  <version>0.0.0</version>
  <description>The vtrex_gazebo package</description>
  <maintainer email="karim@vt.edu">karim</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>cv_bridge</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>image_transport</run_depend>
<run_depend>message_runtime</run_depend>
  <run_depend version_gte="0.5">vtrex_control</run_depend>
  <run_depend version_gte="0.5">vtrex_description</run_depend>
<export>
  <gazebo_ros gazebo_media_path="${prefix}"/>
</export>
</package>
