<?xml version="1.0"?>
<package>
  <name>mybot_gazebo</name>
  <version>0.0.0</version>
  <description>The mybot_gazebo package</description>
  <maintainer email="karim@todo.todo">karim</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>

<export>
  <gazebo_ros gazebo_media_path="${prefix}"/>
</export>
</package>
